hphp/test/slow/func-ptr-no-interop/bad-func.php.expectf
int(1)
classMeth{
  class(A)
  function(f1)
}
int(3)

Fatal error: Call to undefined function f1() in %s/test/slow/func-ptr-no-interop/bad-func.php on line 15
